# ai-auto-trader

./: .env.example  .gitignore  README.md  app.py  logs.db  main.py  main_check.py  main_check.service  main_order.py  main_order.service  mvp.py  pyproject.toml  schema.py  test_openai.py  test_redis_consumer.py
app/: gpt.py  task.py  trader.py
modules/: gpt.py  log.py  task.py  trader.py  webhook.py
tests/: test_pyupbit.py  test_redis_producer.py
